# python-qweather

./: .bumpversion.toml  LICENSE  README.md  pyproject.toml
python_qweather/: __init__.py  const.py  exceptions.py  qweather.py  weather_dataclass.py
tests/: test_python_qweather.py
