
[tool.poetry]
name = "python-qweather"
version = "0.1.5"
description = "Python API wrapper for https://qweather.com"
authors = ["dofine <dofine@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["weather"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
repository = "https://github.com/dofine/python-qweather"


[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.9.3"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.18.3"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[[tool.bumpversion.files]]
filename = "python_qweather/__init__.py"
search = "__version__ = {current_version}"
replace = "__version__ = {current_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = {current_version}"
replace = "version = {current_version}"